// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Footer test testing action click 1`] = `
<FormFooter
  actions={
    Array [
      Object {
        "execute": [MockFunction],
        "name": "Release",
      },
      Object {
        "execute": [MockFunction],
        "name": "Complete",
      },
    ]
  }
>
  <ActionGroup
    data-ouia-component-type="form-footer"
    data-ouia-safe={true}
  >
    <div
      className="pf-c-form__group pf-m-action"
      data-ouia-component-type="form-footer"
      data-ouia-safe={true}
    >
      <div
        className="pf-c-form__group-control"
      >
        <div
          className="pf-c-form__actions"
        >
          <Button
            isDisabled={false}
            key="submit-Complete"
            onClick={[Function]}
            type="submit"
            variant="primary"
          >
            <button
              aria-disabled={false}
              aria-label={null}
              className="pf-c-button pf-m-primary"
              data-ouia-component-id="OUIA-Generated-Button-primary-2"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
              role={null}
              type="submit"
            >
              Complete
            </button>
          </Button>
          <Button
            isDisabled={false}
            key="submit-Release"
            onClick={[Function]}
            type="submit"
            variant="secondary"
          >
            <button
              aria-disabled={false}
              aria-label={null}
              className="pf-c-button pf-m-secondary"
              data-ouia-component-id="OUIA-Generated-Button-secondary-3"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
              role={null}
              type="submit"
            >
              Release
            </button>
          </Button>
        </div>
      </div>
    </div>
  </ActionGroup>
</FormFooter>
`;

exports[`Form Footer test testing showing actions 1`] = `
<FormFooter
  actions={
    Array [
      Object {
        "execute": [MockFunction],
        "name": "Abort",
      },
      Object {
        "execute": [MockFunction],
        "name": "Release",
      },
      Object {
        "execute": [MockFunction],
        "name": "Complete",
      },
    ]
  }
>
  <ActionGroup
    data-ouia-component-type="form-footer"
    data-ouia-safe={true}
  >
    <div
      className="pf-c-form__group pf-m-action"
      data-ouia-component-type="form-footer"
      data-ouia-safe={true}
    >
      <div
        className="pf-c-form__group-control"
      >
        <div
          className="pf-c-form__actions"
        >
          <Button
            isDisabled={false}
            key="submit-Complete"
            onClick={[Function]}
            type="submit"
            variant="primary"
          >
            <button
              aria-disabled={false}
              aria-label={null}
              className="pf-c-button pf-m-primary"
              data-ouia-component-id="OUIA-Generated-Button-primary-1"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
              role={null}
              type="submit"
            >
              Complete
            </button>
          </Button>
          <Button
            isDisabled={false}
            key="submit-Abort"
            onClick={[Function]}
            type="submit"
            variant="secondary"
          >
            <button
              aria-disabled={false}
              aria-label={null}
              className="pf-c-button pf-m-secondary"
              data-ouia-component-id="OUIA-Generated-Button-secondary-1"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
              role={null}
              type="submit"
            >
              Abort
            </button>
          </Button>
          <Button
            isDisabled={false}
            key="submit-Release"
            onClick={[Function]}
            type="submit"
            variant="secondary"
          >
            <button
              aria-disabled={false}
              aria-label={null}
              className="pf-c-button pf-m-secondary"
              data-ouia-component-id="OUIA-Generated-Button-secondary-2"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
              role={null}
              type="submit"
            >
              Release
            </button>
          </Button>
        </div>
      </div>
    </div>
  </ActionGroup>
</FormFooter>
`;

exports[`Form Footer test testing showing empty actions 1`] = `
<FormFooter
  actions={Array []}
/>
`;

exports[`Form Footer test testing showing no actions 1`] = `<FormFooter />`;
